<resources>
    <string name="app_name">MathWizQuiz</string>
    <string name="learn">Learn</string>
    <string name="activities">Activities</string>
    <string name="progress_report">Progress Report</string>
    <string name="banner_image">Banner Image</string>
    <string name="mathwizquiz">MathWizQuiz</string>
    <string name="welcome">Welcome,</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_details">Update Details</string>
    <string name="name">Name</string>
    <string name="course">Course</string>
    <string name="email">Email</string>
    <string name="image_url">Image URL</string>
    <string name="update">Update</string>
    <string name="add_student">Add Student</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="addition">Addition</string>
    //pasta
    <string name="pastaIngredients">Pasta
\nCream Cheese
\nParmesan Cheese
\nOlive Oil
\nGarlic
\nSalt Pepper</string>
    <string name="pastaDesc">Cook your pasta until al dente
\nSaute’ garlic in olive oil until fragrant
\nAdd cream cheese, pasta cooking water, parmesan, and stir well
\nDrain and add pasta to the skillet
\nToss until well combined, adding some pasta water if needed</string>
    //maggi
    <string name="maggiIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="maggieDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //cake
    <string name="cakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="cakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //pancake
    <string name="pancakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pancakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //pizza
    <string name="pizzaIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pizzaDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //burgers
    <string name="burgerIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="burgerDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //fries
    <string name="friesIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="friesDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    <string name="duration">Duration:</string>
    <string name="start_game">Start Game</string>
    <string name="question_1_100">Question- 1/100</string>
</resources>