<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green2"
        android:fontFamily="@font/spartan_bold"
        android:gravity="center"
        android:text="@string/update_details"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/name"
        android:fontFamily="@font/spartan"/>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/course"
        android:fontFamily="@font/spartan"/>

    <EditText
        android:id="@+id/txtCourse"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/email"
        android:fontFamily="@font/spartan"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/image_url"
        android:fontFamily="@font/spartan"/>

    <EditText
        android:id="@+id/txtImageUrl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/update"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/btnUpdate"/>


</LinearLayout>